--- a/style.css
+++ b/style.css
@@ -1,9 +1,12 @@
+/* color pallete */
+/* https://coolors.co/e8ebe4-d2d5dd-b8bacf-999ac6-798071 */
 body {
   margin: 0;
   padding: 0;
   /* border: 1px solid black; */
   font-family: "Cabin", sans-serif;
   /* font-family: "Roboto", sans-serif; */
+  background-color: lightsteelblue;
 }
 
 header {
@@ -25,17 +28,21 @@ main {
   display: flex;
   flex-direction: column;
   align-items: center;
+  background-color: #D2D5DD;
+  box-shadow: 3px 3px  10px black;
 }
 
 #screen {
-  border: 2px solid black;
-  width: 360px;
-  /* margin: 15px 0px; */
-  margin-top: 25px;
-  margin-bottom: 15px;
-  padding: 10px 0px;
-  border-radius: 12px;
-  font-weight: 400;
+    border: 2px solid black;
+    width: 360px;
+    /* margin: 15px 0px; */
+    margin-top: 25px;
+    margin-bottom: 15px;
+    padding: 10px 0px;
+    border-radius: 12px;
+    font-weight: 400;
+    /* background-color: #E8EBE4; */
+    background-color: white;
 }
 
 #working {
@@ -77,7 +84,19 @@ button {
   font-family: "Cabin", sans-serif;
   font-size: 18px;
 }
+button:hover {
+    box-shadow: 1px 1px 1px;
+    scale: 1.01;
+}
 
 #eq {
   width: 160px;
+  background-color: #B8BACF;
+
+}
+
+.operator {
+    /* background-color: #E8EBE4; */
+    /* color: #798071; */
+    /* font-weight: 900; */
 }
