--- a/style.css
+++ b/style.css
@@ -16,7 +16,8 @@ header {
 }
 
 h1 {
-font-size: 40px;}
+  font-size: 40px;
+}
 
 main {
   display: flex;
@@ -31,21 +32,21 @@ main {
   display: flex;
   flex-direction: column;
   align-items: center;
-  background-color: #D2D5DD;
-  box-shadow: 3px 3px  10px black;
+  background-color: #d2d5dd;
+  box-shadow: 3px 3px 10px black;
 }
 
 #screen {
-    border: 2px solid black;
-    width: 360px;
-    /* margin: 15px 0px; */
-    margin-top: 25px;
-    margin-bottom: 15px;
-    padding: 10px 0px;
-    border-radius: 12px;
-    font-weight: 400;
-    /* background-color: #E8EBE4; */
-    background-color: white;
+  border: 2px solid black;
+  width: 360px;
+  /* margin: 15px 0px; */
+  margin-top: 25px;
+  margin-bottom: 15px;
+  padding: 10px 0px;
+  border-radius: 12px;
+  font-weight: 400;
+  /* background-color: #E8EBE4; */
+  background-color: white;
 }
 
 #working {
@@ -89,18 +90,23 @@ button {
 }
 
 button:hover {
-    box-shadow: 1px 1px 1px;
-    scale: 1.01;
+  box-shadow: 1px 1px 1px;
+  /* scale: 1.01; */
+}
+
+.hit {
+  box-shadow: 1px 1px 1px;
+  transform: scale(1.05);
+  transition: 0.1s;
 }
 
 #eq {
   width: 160px;
-  background-color: #B8BACF;
-
+  background-color: #b8bacf;
 }
 
 .operator {
-    /* background-color: #E8EBE4; */
-    /* color: #798071; */
-    /* font-weight: 900; */
+  /* background-color: #E8EBE4; */
+  /* color: #798071; */
+  /* font-weight: 900; */
 }
