--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ body {
   margin: 0;
   padding: 0;
   font-family: "Cabin", sans-serif;
-  background-color: lightsteelblue;
+  background-color: lightgray;
 }
 
 header {
@@ -29,7 +29,7 @@ main {
   display: flex;
   flex-direction: column;
   align-items: center;
-  background-color: #d2d5dd;
+  background-color: #B8BACF;
   box-shadow: 3px 3px 10px black;
 }
 
@@ -41,7 +41,7 @@ main {
   padding: 10px 0px;
   border-radius: 12px;
   font-weight: 400;
-  background-color: white;
+  background-color: #E8EBE4;
 }
 
 #working {
@@ -78,6 +78,7 @@ button {
   border-radius: 12px;
   font-family: "Cabin", sans-serif;
   font-size: 18px;
+  background-color: #E8EBE4;
 }
 
 button:hover {
@@ -92,5 +93,14 @@ button:hover {
 
 #eq {
   width: 160px;
-  background-color: #b8bacf;
+}
+
+footer {
+  display: flex;
+  justify-content: center;
+  margin-top: 25px;
+}
+
+a {
+  text-decoration: none;
 }
